adding load daily from service

--- a/app/directives/goal/goalList.html
+++ b/app/directives/goal/goalList.html
@@ -3,4 +3,4 @@
         <goal item="goalItem" />
     </li>
 </ul>
-<input type="button" ng-show="hasNewGoals" value="Save"/>
+<input type="button" value="Save"/>
