--- a/app/index.html
+++ b/app/index.html
@@ -2,6 +2,12 @@
 <html ng-app="agileResults">
 <head>
     <script data-main="main.js" src="bower_components/requirejs/require.js"></script>
+    <!--TODO: Sass & etc.-->
+    <style>
+        .line-through {
+            text-decoration: line-through;
+        }
+    </style>
 </head>
 <body>
     <div menu></div>
