--- a/app/index.html
+++ b/app/index.html
@@ -2,6 +2,7 @@
 <html ng-app="agileResults">
 <head>
     <script data-main="main.js" src="bower_components/requirejs/require.js"></script>
+    <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css" />
     <!--TODO: Sass & etc.-->
     <style>
         .line-through {
