--- a/wireframes/add-goal.html
+++ b/wireframes/add-goal.html
@@ -22,11 +22,10 @@
 
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-				<ul class="nav navbar-nav">
-					<li class="active"><a href="#">Weekly results <span class="sr-only">(current)</span></a></li>
-					<li><a href="#">Yearly</a></li>
-					<li><a href="#">Hot spots</a></li>
-				</ul>
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">Planning<span class="sr-only">(current)</span></a></li>
+                    <li><a href="#">Backlog</a></li>
+                </ul>
 
 				<ul class="nav navbar-nav navbar-right">
 					<li class="dropdown">
